
* GDB now accepts --no-escape-args as an alternative to --args on the
  command line.  GDB will not escape special shell characters within
  arguments after --no-escape-args.

* gdbserver now accepts --no-escape-args as a command line flag.  When
  this flag is used gdbserver will not escape special shell characters
  within the inferior arguments.

* Python API

  ** Added gdb.record.clear.  Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

  ** When assigning a sequence to gdb.Inferior.arguments, only quote
     and whitespace characters will be escaped.  Everything else will
     be left unmodified.

* Debugger Adapter Protocol changes

  ** The "scopes" request will now return a scope holding global
     variables from the stack frame's compilation unit.

  ** The "scopes" request will return a "returnValue" scope holding
     the return value from the latest "stepOut" command, when
     appropriate.

* New commands

set style line-number foreground COLOR
set style line-number background COLOR
set style line-number intensity VALUE
  Control the styling of line numbers printed by GDB.

maintenance info inline-frames [ADDRESS]
  New command which displays GDB's inline-frame information for the
  current address, or for ADDRESS if specified.  The output identifies
  inlined frames which start at the specified address.

maintenance info blocks [ADDRESS]
  New command which displays information about all of the blocks at
  ADDRESS, or at the current address if ADDRESS is not given.  Blocks
  are listed starting at the inner global block out to the most inner
  block.

maintenance test-remote-args ARGS
  Test splitting and joining of inferior arguments ARGS as they would
  be split and joined when being passed to a remote target.

* Changed commands

remove-symbol-file
  This command now supports file-name completion.

remove-symbol-file -a ADDRESS